# GameOfLifeSimulator

./: .gitignore  CMakeLists.txt  CompileShaders.cmake  compile_commands.json
Resources/: MyShader.metallib
include/: Array.hpp  ShaderProgram.hpp  ShaderUniformHelper.hpp
libs/: mathlib
libs/file/: CMakeLists.txt
libs/file/include/: File.hpp
libs/file/src/: File.cpp
libs/glad/: CMakeLists.txt
libs/logging/: CMakeLists.txt
libs/logging/include/: Log.hpp
libs/mathlib/: CMakeLists.txt
libs/mathlib/include/: Angle.hpp  Clock.hpp  Math.hpp  MathConcepts.hpp  MathHelper.hpp  MathPrint.hpp  Matrix.hpp  MyTypes.hpp  Quaternion.hpp  Random.hpp  Shape.hpp  Time.hpp  Vector.hpp
libs/mathlib/src/: main.cpp
shaders/: compile_dx_shaders.bat  compile_metal_shaders.sh  compile_shaders.bat  compile_spv_shaders.sh  default.frag  default.metal  default.vert  default_frag.dxil  default_frag.hlsl  default_frag.hpp  default_frag.metal  default_frag.spv  default_vert.dxil  default_vert.hlsl  default_vert.hpp  default_vert.metal  default_vert.spv
src/: ShaderProgram.cpp  main.cpp  main.mm
